src/objects/Advertisement__c.object
<CustomObject>
    <description>Ads that are planned to be run as part of a marketing plan</description>
    <fields>
        <fullName>AAARate__c</fullName>
        <label>AAA Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdPlan__c</fullName>
        <label>Ad Plan</label>
        <referenceTo>AdPlan__c</referenceTo>
        <relationshipLabel>Advertisements</relationshipLabel>
        <relationshipName>Advertisements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AdSize__c</fullName>
        <label>Ad Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementType__c</fullName>
        <label>Announcement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AnnouncementType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplyNet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Net?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuyType__c</fullName>
        <label>Buy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Buy</fullName>
                    <default>true</default>
                    <label>Regular Buy</label>
                </value>
                <value>
                    <fullName>Pkg. Deal (date range)</fullName>
                </value>
                <value>
                    <fullName>Pkg. Deal (select dates)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalculatedGross__c</fullName>
        <formula>CASE(RecordType.DeveloperName,
&quot;Radio&quot;,
IF(ISPICKVAL(BuyType__c, &quot;Regular Buy&quot;),
  IF(ApplyNet__c,
    Rate__c / (1 - EffectiveCommission__c * 100) * NumberofSpots__c,
    Rate__c * NumberofSpots__c
  ),
  IF(ApplyNet__c,
    Rate__c / (1 - EffectiveCommission__c * 100),
    Rate__c
  )
),

&quot;Digital&quot;,
Gross__c,

&quot;Television&quot;,
IF(ISPICKVAL(BuyType__c, &quot;Regular Buy&quot;),
  IF(ApplyNet__c,
    Rate__c / (1 - EffectiveCommission__c * 100) * NumberofSpots__c,
    Rate__c * NumberofSpots__c
  ),
  IF(ApplyNet__c,
    Rate__c / (1 - EffectiveCommission__c * 100),
    Rate__c
  )
),

&quot;Print&quot;,
IF(ISPICKVAL(BuyType__c, &quot;Regular Buy&quot;),
  IF(ApplyNet__c,
    Rate__c / (1 - EffectiveCommission__c * 100) * NumberofSpots__c,
    Rate__c * NumberofSpots__c
  ),
  IF(ApplyNet__c,
    Rate__c / (1 - EffectiveCommission__c * 100),
    Rate__c
  )
),

&quot;Outdoor&quot;,
IF(ApplyNet__c,
  Rate__c / (1 - EffectiveCommission__c * 100) * NumberofLocations__c,
  Rate__c * NumberofLocations__c
),

&quot;ProductionMiscellaneous&quot;,
Gross__c,

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedNet__c</fullName>
        <formula>CASE(RecordType.DeveloperName,
&quot;Radio&quot;,
IF(ISPICKVAL(BuyType__c, &quot;Regular Buy&quot;),
  IF(ApplyNet__c,
    Rate__c * NumberofSpots__c,
    Rate__c * (1 - EffectiveCommission__c * 100) * NumberofSpots__c
  ),
  IF(ApplyNet__c,
    Rate__c,
    Rate__c * (1 - EffectiveCommission__c * 100)
  )
),

&quot;Digital&quot;,
Net__c,

&quot;Television&quot;,
IF(ISPICKVAL(BuyType__c, &quot;Regular Buy&quot;),
  IF(ApplyNet__c,
    Rate__c * NumberofSpots__c,
    Rate__c * (1 - EffectiveCommission__c * 100) * NumberofSpots__c
  ),
  IF(ApplyNet__c,
    Rate__c,
    Rate__c * (1 - EffectiveCommission__c * 100)
  )
),

&quot;Print&quot;,
IF(ISPICKVAL(BuyType__c, &quot;Regular Buy&quot;),
  IF(ApplyNet__c,
    Rate__c * NumberofSpots__c,
    Rate__c * (1 - EffectiveCommission__c * 100) * NumberofSpots__c
  ),
  IF(ApplyNet__c,
    Rate__c,
    Rate__c * (1 - EffectiveCommission__c * 100)
  )
),

&quot;Outdoor&quot;,
IF(ApplyNet__c,
  Rate__c * NumberofLocations__c,
  Rate__c * (1 - EffectiveCommission__c * 100) * NumberofLocations__c
),

&quot;ProductionMiscellaneous&quot;,
Net__c,

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CampaignType__c</fullName>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Channel__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>App Install</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>AUDIO &amp; BANNER</fullName>
                </value>
                <value>
                    <fullName>AUDIO ONLY</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>DIRECT BUY</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>FBEvent - buyticketslink</fullName>
                </value>
                <value>
                    <fullName>FBEvent - description</fullName>
                </value>
                <value>
                    <fullName>FBX</fullName>
                </value>
                <value>
                    <fullName>NATIVE</fullName>
                </value>
                <value>
                    <fullName>Paid - artist page</fullName>
                </value>
                <value>
                    <fullName>Paid - artist page image</fullName>
                </value>
                <value>
                    <fullName>Paid - artist page link</fullName>
                </value>
                <value>
                    <fullName>Paid - artist page video</fullName>
                </value>
                <value>
                    <fullName>Paid - dark post</fullName>
                </value>
                <value>
                    <fullName>Paid - link post</fullName>
                </value>
                <value>
                    <fullName>Paid - Lncom</fullName>
                </value>
                <value>
                    <fullName>Paid - photo</fullName>
                </value>
                <value>
                    <fullName>Paid - promotion</fullName>
                </value>
                <value>
                    <fullName>Paid - Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Paid - text only</fullName>
                </value>
                <value>
                    <fullName>Paid - video</fullName>
                </value>
                <value>
                    <fullName>PRE ROLL</fullName>
                </value>
                <value>
                    <fullName>Rich Media</fullName>
                </value>
                <value>
                    <fullName>RTB BUY</fullName>
                </value>
                <value>
                    <fullName>RTB DSP</fullName>
                </value>
                <value>
                    <fullName>RTB VID</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital Production Expense</fullName>
                </value>
                <value>
                    <fullName>Display Advertising</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Mobile Advertising</fullName>
                </value>
                <value>
                    <fullName>National Allocation - Digital</fullName>
                </value>
                <value>
                    <fullName>Radio Streaming</fullName>
                </value>
                <value>
                    <fullName>Search Advertising</fullName>
                </value>
                <value>
                    <fullName>Social Advertising</fullName>
                </value>
                <value>
                    <fullName>Video Advertising</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveCommission__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenseType__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MarketingExpenseType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormatSize__c</fullName>
        <label>Format / Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MediaFormatType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrossCostToAdPlan__c</fullName>
        <label>Gross Cost to Ad Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross__c</fullName>
        <label>Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HasNonLNEBudget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the Advertisement is associated with a Non LNE Budget
(Used to support roll-up-summary filtering)</description>
        <inlineHelpText>Whether the Advertisement is associated with a Non LNE Budget</inlineHelpText>
        <label>Has Non LNE Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSplit__c</fullName>
        <formula>!ISBLANK(MasterAdForSplit__c) || (SplitPct__c != 100 &amp;&amp; SplitPct__c != 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albany</fullName>
                </value>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Amarillo</fullName>
                </value>
                <value>
                    <fullName>Ames</fullName>
                </value>
                <value>
                    <fullName>Anchcorage, AK</fullName>
                </value>
                <value>
                    <fullName>Appleton</fullName>
                </value>
                <value>
                    <fullName>Aspen</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Augusta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Banff</fullName>
                </value>
                <value>
                    <fullName>Baton Rouge</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Beaumont</fullName>
                </value>
                <value>
                    <fullName>Billings</fullName>
                </value>
                <value>
                    <fullName>Biloxi</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Boise</fullName>
                </value>
                <value>
                    <fullName>Bonnyville</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Bozeman</fullName>
                </value>
                <value>
                    <fullName>Brandon</fullName>
                </value>
                <value>
                    <fullName>Branson</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>Burlington, VT</fullName>
                </value>
                <value>
                    <fullName>Burnaby</fullName>
                </value>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>Charleston, SC</fullName>
                </value>
                <value>
                    <fullName>Charleston, WV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MasterAdForSplit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first Advertisement record created which is then split for cost to multiple Ad Plans</description>
        <label>Master Ad for Split</label>
        <referenceTo>Advertisement__c</referenceTo>
        <relationshipLabel>Advertisements</relationshipLabel>
        <relationshipName>SplitWithAds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MediaTypeFormat__c</fullName>
        <label>Media Type Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MediaTypeFormat</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NetCostToAdPlan__c</fullName>
        <label>Net Cost to Ad Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net__c</fullName>
        <label>Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonLNEBudget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-LNE Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NonLNEBudget__c.AdPlan__c</field>
                <operation>equals</operation>
                <valueField>$Source.AdPlan__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NonLNEBudget__c</referenceTo>
        <relationshipLabel>Advertisements</relationshipLabel>
        <relationshipName>Advertisements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofClicks__c</fullName>
        <label># of Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofImpressions__c</fullName>
        <label># of Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label># of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofSpots__c</fullName>
        <label># of Spots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecalculateCommission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SplitAmount__c</fullName>
        <inlineHelpText>The amount that this advertisement is covering when split with other Ad Plans</inlineHelpText>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SplitPct__c</fullName>
        <inlineHelpText>The percentage that this advertisement is covering when split with other Ad Plans</inlineHelpText>
        <label>Split %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpotType__c</fullName>
        <label>Spot Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5 secs</fullName>
                </value>
                <value>
                    <fullName>10 secs</fullName>
                </value>
                <value>
                    <fullName>15 secs</fullName>
                </value>
                <value>
                    <fullName>20 secs</fullName>
                </value>
                <value>
                    <fullName>30 secs</fullName>
                    <default>true</default>
                    <label>30 secs</label>
                </value>
                <value>
                    <fullName>60 secs</fullName>
                </value>
                <value>
                    <fullName>90 secs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertisements (Vendor)</relationshipLabel>
        <relationshipName>Advertisements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WaveAdPlanOwner__c</fullName>
        <description>Owner name for Wave to avoid too many field error during Boomi etl process.</description>
        <formula>AdPlan__r.Owner:User.FirstName &amp; &quot; &quot; &amp; AdPlan__r.Owner:User.LastName</formula>
        <inlineHelpText>Owner name for Wave to avoid too many field error during Boomi etl process.</inlineHelpText>
        <label>WaveAdPlanOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaveAdVendor__c</fullName>
        <description>Wave related field to avoid too many fields for Boomi ETL process.</description>
        <formula>Vendor__r.Name</formula>
        <label>WaveAdVendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxAAARate__c</fullName>
        <formula>(AAARate__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>AAA Rate (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCalculatedGross__c</fullName>
        <formula>(CalculatedGross__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Calculated Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCalculatedNet__c</fullName>
        <formula>(CalculatedNet__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Calculated Net (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossCostToAdPlan__c</fullName>
        <formula>(GrossCostToAdPlan__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Cost to Ad Plan (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGross__c</fullName>
        <formula>(Gross__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetCostToAdPlan__c</fullName>
        <formula>(NetCostToAdPlan__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Cost to Ad Plan (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNet__c</fullName>
        <formula>(Net__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRate__c</fullName>
        <formula>(Rate__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Rate (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSplitAmount__c</fullName>
        <formula>(SplitAmount__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Split Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Advertisement</label>
    <nameField>
        <displayFormat>Adv-{000000}</displayFormat>
        <label>Advertisement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertisements</pluralLabel>
    <recordTypes>
        <fullName>Digital</fullName>
        <active>true</active>
        <description>Record type for digital advertisements</description>
        <label>Digital</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outdoor</fullName>
        <active>true</active>
        <description>Record type for outdoor advertisements</description>
        <label>Outdoor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print</fullName>
        <active>true</active>
        <description>Record type for Print advertisements</description>
        <label>Print</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductionMiscellaneous</fullName>
        <active>true</active>
        <description>Record type for production or miscellaneous advertisments</description>
        <label>Production/Miscellaneous</label>
    </recordTypes>
    <recordTypes>
        <fullName>Radio</fullName>
        <active>true</active>
        <description>Record type for radio advertisements</description>
        <label>Radio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Television</fullName>
        <active>true</active>
        <description>Record type for television advertisements</description>
        <label>Television</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LNE_DigitalGrossNet</fullName>
        <active>true</active>
        <description>If advertisement record type = Digital, then either net or gross is required</description>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Digital&quot; &amp;&amp;
((ISBLANK(Gross__c) &amp;&amp; ISBLANK(Net__c)) || (Gross__c = 0 &amp;&amp; Net__c = 0)) &amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorMessage>For digital advertisement records, either net or gross is required. Please enter a non-zero value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EndDateStartDate</fullName>
        <active>true</active>
        <description>End Date can not be greater than the Start Date.</description>
        <errorConditionFormula>OR(
RecordType.DeveloperName = &apos;Digital&apos;,
RecordType.DeveloperName = &apos;Print&apos;,
RecordType.DeveloperName = &apos;Radio&apos;,
RecordType.DeveloperName = &apos;Outdoor&apos;,
RecordType.DeveloperName = &apos;Television&apos;) &amp;&amp;

EndDate__c  &lt; StartDate__c &amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date can not be greater than the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_TimeFormat</fullName>
        <active>true</active>
        <description>Time format must be HH:MM AM|PM</description>
        <errorConditionFormula>NOT(REGEX( StartTime__c  , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;))
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
StartTime__c &lt;&gt; NULL
||

NOT(REGEX( EndTime__c  , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;))
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
EndTime__c &lt;&gt; NULL</errorConditionFormula>
        <errorMessage>Start and End time format must be HH:MM AM|PM</errorMessage>
    </validationRules>
</CustomObject>